--- a/style.css
+++ b/style.css
@@ -112,6 +112,86 @@ body{
     }
     
     .ButtonDownload {
+        margin-top: 15PX;
+        width: 185px;
+        height: 31px;
+        font-size: 20px;
+        background-color: rgba(124, 0, 182, 1);
+        border-style: none;
+        border-radius: 10px;
+    }
+    
+    .YourPrice {
+        color: rgba(165, 165, 165, 1);
+        font-size: 16px;
+        padding: 0px 0px 0px 17px;
+    }
+    
+    /* Описание */
+    .AboutGame {
+        margin-top: 40px;
+        margin-bottom: 40px;
+        max-width: 321px;
+        display: flex;
+        flex-direction: column;
+        font-size: 20px;
+    }
+    
+    .AboutGame p:nth-child(2) {
+        width: 298px;
+    }
+    
+    .AboutGame p:nth-child(3) {
+        width: 298px;
+    }
+    
+    .AG_Text {
+        margin-bottom: 35px;
+    }
+    
+    /* Блок фоток */
+    .PhotoBlock {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+    }
+    
+    .Photo_PB {
+        padding:5.4px 0px;
+        width: 321px;
+    }
+    
+    .LeftAndRight {
+        display: flex;
+        flex-direction: column;
+    }
+}
+
+@media screen and (max-width:390px){
+    .Container {
+        max-width: 321px;
+        margin: 0 auto;
+    }
+    /* Название */
+    .GameName {
+        font-size: 51px;
+    }
+    /* Загрузка */
+    .DownloadMenu {
+        max-width: 321px;
+        margin-top: 40px;
+    }  
+    .ForWin {
+        font-size: 28px;
+    }  
+    .ButtonAndText {
+        display: flex;
+        align-items: center;
+    }
+    
+    .ButtonDownload {
+        margin-top: 15PX;
         width: 185px;
         height: 31px;
         font-size: 20px;
