--- a/style.css
+++ b/style.css
@@ -171,7 +171,7 @@ body{
 }
 @media screen and (max-width:1380px){
     .Container {
-        max-width: 908px;
+        max-width: 1000px;
         margin: 0 auto;
     }
     /* Название */
@@ -179,7 +179,7 @@ body{
         display: flex;
         justify-content: center;
         margin-top: 30px;
-        font-size: 100px;
+        font-size: 160px;
     }
     /* Загрузка */
     .DownloadMenu {
@@ -247,6 +247,89 @@ body{
     
     .LeftAndRight {
         display: flex;
+        justify-content: space-between;
+        margin-bottom: 30PX;
+    }
+}
+@media screen and (max-width:990px){
+    .Container {
+        max-width: 1000px;
+        margin: 0 auto;
+    }
+    /* Название */
+    .GameName {
+        display: flex;
+        justify-content: center;
+        margin-top: 30px;
+        font-size: 120px;
+    }
+    /* Загрузка */
+    .DownloadMenu {
+        max-width: 494px;
+        margin-top: 40px;
+    }  
+    .ForWin {
+        font-size: 28px;
+    }  
+    .ButtonAndText {
+        display: flex;
+        align-items: center;
+    }
+    
+    .ButtonDownload {
+        margin-top: 15PX;
+        width: 192px;
+        height: 31px;
+        font-size: 20px;
+        background-color: rgba(124, 0, 182, 1);
+        border-style: none;
+        border-radius: 10px;
+    }
+    
+    .YourPrice {
+        color: rgba(165, 165, 165, 1);
+        font-size: 19px;
+        padding: 0px 0px 0px 17px;
+    }
+    
+    /* Описание */
+    .AboutGame {
+        margin-top: 40px;
+        margin-bottom: 40px;
+        max-width: 494px;
+        display: flex;
+        flex-direction: column;
+        font-size: 24px;
+    }
+    
+    .AboutGame p:nth-child(2) {
+        width: 420px;
+    }
+    
+    .AboutGame p:nth-child(3) {
+        width: 420px;
+    }
+    
+    .AG_Text {
+        margin-bottom: 35px;
+    }
+    
+    /* Блок фоток */
+    .PhotoBlock {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+    }
+    
+    .Photo_PB {
+        padding:5.4px 0px;
+        width: 395px;
+    }
+    
+    .LeftAndRight {
+        display: flex;
+        justify-content: space-between;
         margin-bottom: 30PX;
     }
 }
